--- a/src/main/config/areas.properties
+++ b/src/main/config/areas.properties
@@ -10,6 +10,7 @@ path    = images/tokens
 
 # london
 area.london.name                 = london
+area.london.displayName          = Londres
 area.london.type                 = touristic
 area.london.id                   = 1
 area.london.to.london            = 
@@ -27,6 +28,7 @@ area.london.to.mesopotamia       = paris,rome,greece
 
 # paris
 area.paris.name                  = paris
+area.paris.displayName          = paris
 area.paris.type                  = touristic
 area.paris.id                   = 2
 area.paris.to.london             = 
@@ -44,6 +46,7 @@ area.paris.to.mesopotamia        = rome,greece
 
 # rome
 area.rome.name                 = rome
+area.rome.displayName          = rome
 area.rome.type                 = touristic
 area.rome.id                   = 3
 area.rome.to.london            = paris
@@ -61,6 +64,7 @@ area.rome.to.mesopotamia       = greece
 
 # berlin
 area.berlin.name                 = berlin
+area.berlin.displayName          = berlin
 area.berlin.type                 = touristic
 area.berlin.id                   = 4
 area.berlin.to.london            = 
@@ -78,6 +82,7 @@ area.berlin.to.mesopotamia       = warsaw,greece
 
 # vienna
 area.vienna.name                 = vienna
+area.vienna.displayName          = vienna
 area.vienna.type                 = touristic
 area.vienna.id                   = 5
 area.vienna.to.london            = paris
@@ -95,6 +100,7 @@ area.vienna.to.mesopotamia       = rome,greece
 
 # warsaw
 area.warsaw.name                 = warsaw
+area.warsaw.displayName          = warsaw
 area.warsaw.type                 = touristic
 area.warsaw.id                   = 6
 area.warsaw.to.london            = berlin
@@ -112,6 +118,7 @@ area.warsaw.to.mesopotamia       = greece
 
 # moscow
 area.moscow.name                 = moscow
+area.moscow.displayName          = moscow
 area.moscow.type                 = touristic
 area.moscow.id                   = 7
 area.moscow.to.london            = warsaw,berlin
@@ -133,6 +140,7 @@ area.moscow.to.mesopotamia       = warsaw,greece
 
 # greece
 area.greece.name                 = greece
+area.greece.displayName          = greece
 area.greece.type                 = excavation
 area.greece.color                = #ff5b2b
 area.greece.id                   = 8
@@ -156,6 +164,7 @@ area.greece.specificKnowledgeTokens  = sa:1
 
 # crete
 area.crete.name                        = crete
+area.crete.displayName          = crete
 area.crete.type                        = excavation
 area.crete.color                       = #895959
 area.crete.id                   = 9
@@ -179,6 +188,7 @@ area.crete.specificKnowledgeTokens     = sa:1
 
 # egypt
 area.egypt.name                        = egypt
+area.egypt.displayName          = egypt
 area.egypt.type                        = excavation
 area.egypt.color                       = #fff168
 area.egypt.id                   = 10
@@ -202,6 +212,7 @@ area.egypt.specificKnowledgeTokens     = sa:1
 
 # palestine
 area.palestine.name                    = palestine
+area.palestine.displayName          = palestine
 area.palestine.type                    = excavation
 area.palestine.color                   = #b7ca79
 area.palestine.id                      = 11
@@ -225,6 +236,7 @@ area.palestine.specificKnowledgeTokens = sa:1
 
 # mesopotamia
 area.mesopotamia.name                  = mesopotamia
+area.mesopotamia.displayName          = mesopotamia
 area.mesopotamia.type                  = excavation
 area.mesopotamia.color                 = #375d81
 area.mesopotamia.id                    = 12
