--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,12 @@
             <version>2.1</version>
             <type>jar</type>
         </dependency>
+        <dependency>
+            <groupId>org.easymock</groupId>
+            <artifactId>easymock</artifactId>
+            <version>3.0</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
   
   
