--- a/src/main/config/config.properties
+++ b/src/main/config/config.properties
@@ -11,8 +11,10 @@
 # ------------------------------------------------------------------------------
 expoCardTokens.id   = 
 
-path.images = /images/
-path.playerToken = /images/playerToken/
+path.images         = /images/
+path.playerToken    = /images/playerToken/
+path.tokens         = /images/tokens/
+# path to token of egypt: path/egypt/
 
 # ------------------------------------------------------------------------------
 #                     Rules (configuration about game's rules)
