--- a/src/main/config/areas.properties
+++ b/src/main/config/areas.properties
@@ -157,7 +157,7 @@ area.greece.to.egypt             = crete
 area.greece.to.palestine         = crete
 area.greece.to.mesopotamia       = 
 
-area.greece.pointTokens              = p1a,1:1|p1b,1:1|p1c,1:1|p1d,1:1|p2a,2:1|p2b,2:1|p2c,2:1|p2d,2:1|p3a,3:1|p3b,3:1|p3c,3:1|p4a,4:1|p5a,5:1|p5b,5:1|p6a,6:1
+area.greece.pointTokens              = p1a,1:1|p1b,1:1|p1c,1:1|p1d,1:1|p2a,2:1|p2b,2:1|p2c,2:1|p3a,3:1|p3b,3:1|p4a,4:1|p5a,5:1|p5b,5:1|p6a,6:1
 area.greece.emptyTokens              = ea:16
 area.greece.generalKnowledgeTokens   = ga:1
 area.greece.specificKnowledgeTokens  = sa:1
@@ -254,7 +254,7 @@ area.mesopotamia.to.palestine          = crete
 area.mesopotamia.to.mesopotamia        = 
 
 
-area.mesopotamia.pointTokens             = p1a,1:1|p1b,1:2|p1c,1:1|p1d,1:1|p1e,1:1|p3a,3:1|p4a,4:1|p4b,4:1|p4c,4:1|p5a,5:1|p5b,5:1|p6a,6:1|p7a,7:1
+area.mesopotamia.pointTokens             = p1a,1:1|p1b,1:2|p1c,1:1|p1d,1:1|p1e,1:1|p3a,3:1|p3b,3:1|p3c,3:1|p4a,4:1|p4b,4:1|p4c,4:1|p5a,5:1|p5b,5:1
 area.mesopotamia.emptyTokens             = ea:16
 area.mesopotamia.generalKnowledgeTokens  = ga:1
 area.mesopotamia.specificKnowledgeTokens = sa:1
