mise au propre release

--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -9,10 +9,10 @@
 # Root logger option (uncomment the running environment)
 
 # development
-log4j.rootLogger=DEBUG, stdout
+#log4j.rootLogger=DEBUG, stdout
 
 # test (prod)
-#log4j.rootLogger=ERROR, stdout file
+log4j.rootLogger=ERROR, stdout file
 
 # prod
 #log4j.rootLogger=ERROR, file
